// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with NO expenses 1`] = `
<div>
  <p>
    <Link
      replace={false}
      to="/edit/1"
    />
     - $
     - 
  </p>
</div>
`;

exports[`should render ExpenseListItem with expenses 1`] = `
<div>
  <p>
    <Link
      replace={false}
      to="/edit/1"
    >
      Gum
    </Link>
     - $
    195
     - 
    0
  </p>
</div>
`;
